# spurious_halo_classifier

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: 01_eda_bronze.ipynb  02_eda_silver.ipynb  03_label_analysis.ipynb  04_feature_distributions.ipynb  05_model_comparison.ipynb  06_shap_analysis.ipynb  07_generalisation.ipynb
reports/: spurious_halo_classifier.mplstyle
scripts/: run_mergertree_analysis.sh
sql/queries/: cross_sim_summary.sql  feature_distributions.sql  label_counts.sql
sql/schema/: bronze.sql  gold.sql  silver.sql
src/: config.py  db.py
src/bronze/: load_bronze.py  parse_ahf.py  parse_matches.py  parse_protohalos.py
src/gold/: build_gold.py  features.py  labels.py  splits.py
src/models/: data.py  evaluate.py  mlp.py  sklearn_models.py  train_pytorch.py  train_sklearn.py
src/silver/: build_silver.py  clean_halos.py  filter_matches.py  join_protohalos.py
src/utils/: plotting.py
tests/: conftest.py  test_config.py  test_evaluate.py  test_features.py  test_labels.py  test_parse_ahf.py  test_parse_matches.py  test_silver_build.py
tests/fixtures/: sample.AHF_halos  sample_croco
