[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spurious-halo-classifier"
version = "1.0.0"
description = "Binary classifier distinguishing genuine from spurious dark matter haloes in WDM N-body simulations."
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3",
    "polars>=1.40",
    "numpy>=2.0",
    "sqlalchemy>=2.0",
    "scikit-learn>=1.8",
    "torch>=2.9",
    "shap>=0.46",
    "mlflow>=3.11",
    "pyyaml>=6.0",
    "scipy>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "basedpyright>=1.39",
    "ipykernel>=7.2",
    "jupyterlab>=4.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.basedpyright]
pythonVersion = "3.13"
extraPaths = ["/opt/anaconda3/lib/python3.13/site-packages"]
include = ["src", "tests"]
exclude = ["notebooks", "**/*.ipynb"]
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportAny = "none"
